更新 .env.development

--- a/apps/web-antd/.env.development
+++ b/apps/web-antd/.env.development
@@ -5,7 +5,7 @@ VITE_BASE=/
 
 # 接口地址
 # API接口
-VITE_GLOB_API_URL=http://mosang.asia:3666/
+VITE_GLOB_API_URL=http://localhost:3600/
 # 网站名称
 VITE_GLOB_WEB_TITLE=m3u8DL_console
 # 是否开启 Nitro Mock服务，true 为开启，false 为关闭
